feat: Spring Boot upgrade to 3.5.11: Extra related changes are made: JUnit dependency is removed, Jupiter used instead; dependencies management is improved; maven-compiler-plugin version is changed to 3.15.0. DependsOnDatabaseInitialization annotation used to ensure correct order of beans init. JUnit4 tests migrated to Jupiter. Also: clover-maven-plugin is removed.